# Options_Model

./: README.md
Options_Bloomberg/: pyproject.toml  sample_spy.csv
Options_Bloomberg/output/AAPL_20260305/: AAPL_report.txt
Options_Bloomberg/src/options_pricing/: averaging.py  calibration.py  cli.py  data.py  visualization.py
Options_Bloomberg/src/options_pricing.egg-info/: entry_points.txt  top_level.txt
Options_IB/: OVERVIEW.md
Options_IB/output/NFLX_20260305/: NFLX_multi_dte_summary.txt
Options_IB/output/NFLX_20260305/134DTE/: NFLX_report.txt
Options_IB/output/NVDA_20260305/: NVDA_multi_dte_summary.txt
Options_IB/src/options_pricing/: cli.py  data.py  density.py  report.py  visualization.py
Options_IB/src/options_pricing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Options_IB/tests/: test_averaging.py
Options_IB_MarketImplied/: OVERVIEW.md  PRESENTATION_NOTES.md  pyproject.toml
Options_IB_MarketImplied/output/NFLX_20260305/28DTE/: NFLX_report.txt
Options_IB_MarketImplied/output/NVDA_20260305/169DTE/: NVDA_report.txt
Options_IB_MarketImplied/output/USO_20260309/: USO_multi_dte_summary.txt
Options_IB_MarketImplied/output/USO_20260309/67DTE/: USO_report.txt
Options_IB_MarketImplied/output/WMT_20260305/: WMT_report.txt
Options_IB_MarketImplied/src/options_pricing/: averaging.py  calibration.py  cli.py  data.py  density.py  market_inputs.py  report.py  visualization.py
Options_IB_MarketImplied/src/options_pricing/models/: bsm.py  crr.py  heston.py  merton.py
Options_IB_MarketImplied/tests/: test_market_inputs.py
(+6 files in other folders)
