[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-pricing-bbg"
version = "0.1.0"
description = "Options pricing with Bayesian Model Averaging — Bloomberg data source"
requires-python = ">=3.10"
dependencies = [
    "blpapi>=3.19",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.scripts]
optiq-bbg = "options_pricing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
