[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-pricing"
version = "0.1.0"
description = "Options pricing with Bayesian Model Averaging and risk-neutral density extraction"
requires-python = ">=3.10"
dependencies = [
    "ib_insync>=0.9.86",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.scripts]
options-pricing = "options_pricing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
